<resources>
    <string name="app_name">Sea merchant</string>
    <string name="HOUR_MINUTES_STRING" translatable="false">%1$d:%2$02d</string>
    <string name="SUNDAY">Sunday</string>
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="DAY_NUMBER">Day #%1$d</string>
    <string name="EGYPT">Egypt</string>
    <string name="ISRAEL">Israel</string>
    <string name="TURKEY">Turkey</string>
    <string name="CYPRUS">Cyprus</string>
    <string name="GREECE">Greece</string>
    <string name="WHEAT">wheat</string>
    <string name="OLIVES">olives</string>
    <string name="COPPER">copper</string>
    <string name="TONNE">tonne</string>
    <string name="CASH">cash</string>
    <string name="CASH_UNITS">$</string>
    <string name="TOTAL_VALUE">total value</string>
    <string name="MONEY_STRING">%1$s\$</string>
    <string name="HOLD_QUESTION">How much %1$s to hold?</string>
    <string name="BUY_ALL">Buy all</string>
    <string name="SELL_ALL">Sell all</string>
    <string name="FILL_CAPACITY">Fill capacity</string>
    <string name="CASH_STRING">Cash: %1$s\$</string>
    <string name="LOCK_STRING">Lock: %1$s\$</string>
    <string name="CAPACITY_MESSAGE">Capacity size: %1$s tonne, Goods size %2$s tonne.</string>
    <string name="CAPACITY_BUTTON_STRING" translatable="false">%1$s/%2$s</string>
    <string name="ONE_FREE_FIX">One free fix</string>
    <string name="ONE_FREE_FIX_QUESTION">Free complete fixing of the ship, once in the game?</string>
    <string name="FIXED_SHIP_QUESTION">How much to invest in repairing the ship?</string>
    <string name="FIXED_AS_POSSIBLE">Fix as possible</string>
    <string name="FIXED_SHIP_TIP">Tip: A broken ship falls apart on the voyage</string>
    <string name="FIXED_SHIP">Fixed ship</string>
    <string name="DAMAGED_SHIP">Damage: %1$s\$</string>
    <string name="FIXING_STRING">Fix: %1$s\$</string>
    <string name="GOOD_SEA_STRING">The sea looks good today</string>
    <string name="STORM_STRING">Storm develops near %1$s today</string>
    <string name="FOG_STRING">Fog at %1$s today</string>
    <string name="WIND_STRING">Wind near %1$s today</string>
    <string name="SAIL_WITH_NO_GURADS">Sail without guard ships?</string>
    <string name="ONE_GUARD_COST">One guard ship cost %1$s (%2$.2f%%)</string>
    <string name="TOTAL_GUARD_COST">Total cost %1$s, Cash %2$s</string>
    <string name="SAIL_DESTINATION">Sail destination: %1$s</string>
    <string name="SAIL_LANDING_HOUR">Landing hour %1$d:00</string>
    <string name="SAIL_CURRENT_TIME">Current time: %1$d:%2$02d</string>
    <string name="DANGERS">Dangers:</string>
    <string name="PIRATES">Pirates!</string>
    <string name="PIRATES_FAST">The fast pirates ship got you!</string>
    <string name="PIRATES_MUST_ATTACK">You must attack them!</string>
    <string name="PIRATES_REFUSE_OFFER">The pirates refuse to your offer!</string>
    <string name="WIN_THE_BATTLE">You won the battle!</string>
    <string name="SELECT_WIN_PRIZE">You can chose to capture the pirates ship for more capacity or to rob it for treasure!</string>
    <string name="WIN_CAPACITY">You captured the pirate\'s ship and your capacity was increased by %1$s tonne.</string>
    <string name="WIN_TREASURE">You found on the pirate\'s ship a treasure worth %1$s$.</string>
    <string name="WIN_WITH_DAMAGE">Unfortunately while fighting a damage of %1$s$ caused to your ship.</string>
    <string name="LOSE_BATTLE_AND_CASH">The pirates won the battle and robbed %1$s$.</string>
    <string name="LOSE_BATTLE_AND_GOODS">The pirates won the battle and robbed %1$s tonnes of %2$s!</string>
    <string name="LOSE_BATTLE_DAMAGE">Additionally, The pirates caused damage to your ship, worth %1$s$.</string>
    <string name="WHAT_TO_DO_WITH_PIRATES">What would you like to do?</string>
    <string name="NO_GUARD_SHIPS">You don\'t have guard ships. </string>
    <string name="NUM_GUARDS_AGAINST_PIRATES">You have %1$d guard ships.</string>
    <string name="PIRATES_CHANCES_WIN_ESCAPE">Your win chances are %1$d%% and your escape chances are %2$d%%.</string>
    <string name="PIRATES_TIP">Tip: Battle win will give award. Lose will be painful</string>
    <string name="CAPTURE">Capture</string>
    <string name="ROB">Rob</string>
    <string name="ATTACK">Attack</string>
    <string name="ESCAPE">Escape</string>
    <string name="ESCAPE_DONE">You were able to escape from them.</string>
    <string name="NEGOTIATE">Negotiate</string>
    <string name="OFFER_TO_PIRATES">What will you offer to the pirates?</string>
    <string name="GOODS_TO_OFFSET">%1$s: %2$d out of %3$d tonne</string>
    <string name="CASH_TO_OFFER">Cash: %1$d out of %2$d$</string>
    <string name="PIRATES_OFFER_ACCEPTED">The pirates accepted your offer.</string>
    <string name="ABANDONED_SHIP">Abandoned Ship!</string>
    <string name="ABANDONED_SHIP_INVENTORY">You have found an abandoned ship with %1$s tonne of %2$s on it.</string>
    <string name="SHOAL">Shoal!</string>
    <string name="SHOAL_DAMAGE">Due to the poor visibility conditions at night, your ship runs aground!\n the damage is %1$s$.</string>
    <string name="SINK_DUE_TO_OVERLOAD">The ship sinks due to overload!</string>
    <string name="SINK_DAMAGE">The sailors throw %1$s tons of %2$s into the sea to save it.</string>
    <string name="MORE_DAMAGE">The ship damage is increasing!</string>
    <string name="MORE_DAMAGE_RESULT">Due to the sailing with a broken ship, the damage increases with %1$s$.</string>
    <string name="NAVIGATION_ERROR_TITLE">Strong winds confuse the navigators!</string>
    <string name="NAVIGATION_ERROR_RESULT">The ship reaches %1$s instead of %2$s!</string>
    <string name="STORM_TITLE">The ship was caught in a storm!</string>
    <string name="STORM_WASH_GOODS">The high waves wash %1$s tonne of %2$s from the ship.</string>
    <string name="STORM_HURT_SHIP">The high waves hurt the ship and create damage worth %1$s$.</string>
    <string name="FOG_TITLE">Heavy fog covers the harbor!</string>
    <string name="FOG_RESULT">The ship cannot land and must return to %1$s.</string>
    <string name="FOG_NEXT_STATE">The ship cannot land. Where do you want to sail to?</string>
    <string name="SAIL_ENDED_PEACEFULLY">You have reached %1$s peacefully!!</string>
    <string name="SAIL_ENDED_BAD">The ship has survived the sail to %1$s.</string>
    <string name="MARKET_CLOSED">Too late, the market is already closed.</string>
    <string name="MARKET_FORBIDDEN">Can\'t go to market.</string>
    <string name="MARKET_STATE">Market state in the middle east</string>
    <string name="PRICE_UP">The %1$s\'s price in %2$s raised to %3$d$!</string>
    <string name="PRICE_DOWN">The %1$s\'s price in %2$s fall to %3$d$!</string>
    <string name="FISH_BOAT">A fish boat collide with your ship. The damage is %1$s$!</string>
    <string name="FIRE">A fire breaks out in warehouses and destroys %1$s tonne of %2$s!</string>
    <string name="BIGGER_SHIP_FOR_CASH_OFFER">You can increase the ship capacity by %1$s tonne for %2$s$ (You have %3$s$).</string>
    <string name="BIGGER_SHIP_FOR_GOODS_OFFER">You can increase the ship capacity by %1$s tonne for %2$s tonne of %3$s (You have %4$s tonne).</string>
    <string name="MERCHANT_BUY">A merchant needs urgently %1$s. He is willing to pay %2$d$ for tonne for all your inventory. Will you sell?</string>
    <string name="MERCHANT_SELL">A merchant needs urgently to get rid of his %1$s. He is willing to sell %2$s tonne for %3$d$ per tonne. Will you buy?</string>
    <string name="STRIKE_TITLE">The ship crew strikes!\n Will you negotiate with them?</string>
    <string name="STRIKE_OPTIONS">If negotiation fails it would take two days to find new crew. You can look for a new crew now and lose one day job. </string>
    <string name="NEW_CREW">New crew</string>
    <string name="OFFER_TO_CREW">What will you offer to the crew?</string>
    <string name="CREW_OFFER_ACCEPTED">The crew accepted your offer.</string>
    <string name="CREW_REFUSE_OFFER">The crew refuses to your offer!</string>
    <string name="LOSE_2_DAYS">You lose two days finding new crew.</string>
    <string name="NEXT_DAY_NEW_CREW">In the next day you are working with new crew.</string>
    <string name="DANGER_BROKEN_SHIP_TITLE">Danger: Broken Ship.</string>
    <string name="DANGER_OVERLOAD_TITLE">Danger: Overloaded Ship.</string>
    <string name="DANGER_NIGHT_SAIL_TITLE">Danger: Nigh Sail.</string>
    <string name="DANGER_WEATHER_TITLE">Danger: Bad Weather.</string>
    <string name="DANGER_BROKEN_SHIP_MESSAGE">Sailing on a broken ship can aggravate the damage.</string>
    <string name="DANGER_OVERLOAD_MESSAGE">The ship is overloaded beyond its capacity and may sink.</string>
    <string name="DANGER_NIGHT_SAIL_MESSAGE">The ship could run aground that would cause damage of up to %1$s$.</string>
    <string name="DANGER_NIGHT_SAIL_SHORT_MESSAGE">The ship could run aground.</string>
    <string name="DANGER_FOG_MESSAGE">The fog in %1$s could prevent the mooring in the port.</string>
    <string name="DANGER_FOG_SHORT_MESSAGE">The fog could prevent the mooring in the port.</string>
    <string name="DANGER_STORM_MESSAGE">The storm could damage the ship and the goods on board.</string>
    <string name="DANGER_WIND_MESSAGE">Strong winds can make navigation difficult.</string>
    <string name="DANGER_PIRATES_MESSAGE">The sea is infested with bandits. It is recommended to rent guard ships.</string>
    <string name="CANCEL">Cancel</string>
    <string name="CONFIRM">Confirm</string>
    <string name="TUTORIAL">Tutorial</string>
    <string name="MENU">Menu</string>
    <string name="CALCULATOR">Press on the prices for calculator</string>
    <string name="CANNOT_SAIL_TITLE">Cannot sail</string>
    <string name="GREECE_IS_TOO_FAR">You can sail to and from Greece from Cyprus only</string>
    <string name="CANNOT_SAIL_AT_NIGHT">It is too late to set sail</string>
    <string name="CANNOT_SAIL_WITH_HEAVY_DAMAGE">The damage to the ship is too heavy and prevents sailing</string>
    <string name="CANNOT_REACH_BEFORE_SLEEP_TIME">The voyage is too long and will not be enough to arrive before midnight.</string>
    <string name="CANNOT_FIX_TITLE">Cannot fix</string>
    <string name="CANNOT_FIX_FIXED_SHIP">The ship is already fixed</string>
    <string name="CANNOT_FIX_AT_NIGHT">It is too late to fix now.</string>
    <string name="TUTORIAL_TITLE">Tutorial</string>
    <string name="TUTORIAL_SELL">You are in %1$s and the %2$s price here is %3$d$ and you have %4$d tonne.
    Press on the %2$s button to sell the goods.</string>
    <string name="TUTORIAL_BUY">You are in %1$s and the %2$s price here is %3$d$ for tonne and in %4$s
        the price is %5$d$. Press on the %2$s button to buy the goods.</string>
    <string name="OPERATION_NO_TIME">This operation won\'t take more time.</string>
    <string name="CAPACITY_BUTTON">Capacity</string>
    <string name="SCORE_BUTTON">Score</string>
    <string name="ABOUT_TITLE">Sea Merchant \n Shir Ben Israel</string>
    <string name="ABOUT_VERSION">Version 2.00</string>
    <string name="ABOUT_DESIGN">Designing and Programming: \n Shir Ben Israel</string>
    <string name="ABOUT_INSPIRATION">Inspired by Soher Hayam of MATACH</string>
    <string name="ABOUT_SOUNDS">Sounds: http://www.freesfx.co.uk</string>
    <string name="ABOUT_BACKGROUND">Background photo: Victor Freeman</string>
    <string name="ABOUT_DRAWING">Drawing: Bar Eshkol &amp; Alex Tsevko</string>
    <string name="BACK">Back</string>
    <string name="SCORE_IS_HIDDEN">Your high scores are hidden in Google Play. Update setting in google play games to change this.</string>
</resources>