<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/strike"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/STRIKE_TITLE"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="@string/STRIKE_OPTIONS"
        android:textSize="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/NEGOTIATE"
            android:onClick="onExitSimpleNewDayEventWindow" />

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/NEW_CREW"
            android:onClick="onExitSimpleNewDayEventWindow" />

        <include layout="@layout/empty_horizontal_text" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="" />

</LinearLayout>
