<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pirates"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pirates_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/PIRATES"/>

    <TextView
        android:id="@+id/pirates_chances_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:text="מה ברצונך לעשות? ספינות משמר? סיכויי ניצחון? סיכויי הימלטות?" />

    <TextView
        android:id="@+id/pirates_tip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:text="@string/PIRATES_TIP" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/sail_or_cancel_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:id="@+id/attack_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="onAttackClick"
            android:text="@string/ATTACK"/>

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:id="@+id/escape_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="onEscapeClick"
            android:text="@string/ESCAPE"/>

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:id="@+id/negotiate_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="onNegotiateClick"
            android:text="@string/NEGOTIATE" />

        <include layout="@layout/empty_horizontal_text" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />


</LinearLayout>
