<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/high_score_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/current_score"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="" />

    <TextView
        android:id="@+id/note_on_google_games"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textSize="14dp"
        android:text="@string/SCORE_IS_HIDDEN"/>

    <LinearLayout
        android:id="@+id/scores_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="6">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/capacity_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_weight="6">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/high_score_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:background="@drawable/wide_cash_button"
            android:scaleType="fitXY"
            android:gravity="center"
            android:onClick="onScorePageClick"
            android:text="@string/SCORE_BUTTON" />

        <Button
            android:id="@+id/high_capacity_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:background="@drawable/wide_capacity_button"
            android:scaleType="fitXY"
            android:gravity="center"
            android:onClick="onScorePageClick"
            android:text="@string/CAPACITY_BUTTON" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:background="@drawable/wide_empty_slim_button"
            android:scaleType="fitXY"
            android:gravity="center"
            android:onClick="onExistHighScore"
            android:text="@string/BACK" />

    </LinearLayout>

</LinearLayout>

