<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/escape"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/battle_result_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/WIN_THE_BATTLE"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/battle_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/battle_damage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center_horizontal"
        android:text="" />

    <Button
        android:id="@+id/attack_pirates_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/yes_button"
        android:gravity="center_horizontal"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="onBattleWinDoneClick" />

    <LinearLayout
        android:id="@+id/capture_or_rob_pirates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="horizontal">

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@drawable/empty_button"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="onCapturePiratesClick"
            android:text="@string/CAPTURE"/>

        <include layout="@layout/empty_horizontal_text" />

        <Button
            android:id="@+id/rob_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@drawable/empty_button"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="onRobPiratesClick"
            android:text="@string/ROB"/>

        <include layout="@layout/empty_horizontal_text" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="" />

</LinearLayout>
